--- a/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_MenuDichVu.cshtml
+++ b/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_MenuDichVu.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<BTL_QlBi_a.Models.Entities.DichVu>
-<link rel="stylesheet" href="~/asset/css/qlBan/menuDichVu.css" />
+<link rel="stylesheet" href="~/asset/css/qlBan/menuDichVu.css?v=@DateTime.Now.Ticks" />
 <div class="menu-header">
     <h4 class="menu-title">📋 Thêm dịch vụ</h4>
     <button class="btn-close-menu" onclick="TableManager.closeModal()">✕</button>
