--- a/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_AddBan.cshtml
+++ b/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_AddBan.cshtml
@@ -235,8 +235,8 @@
 
         .image-preview img {
             width: 100%;
-            height: 300px;
-            object-fit: cover;
+            height: 200px;
+            object-fit: contain;
             border-radius: 12px;
         }
 
