--- a/BTL_QlBi_a/Views/Home/Partials/DichVu/_AddDichVuModal.cshtml
+++ b/BTL_QlBi_a/Views/Home/Partials/DichVu/_AddDichVuModal.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="addServiceModal" class="modal" style="display: none;">
+﻿<div id="addServiceModal" class="dichvu-modal" style="display: none;">
     <div class="modal-overlay" onclick="DichVuManager.closeModal()"></div>
     <div class="modal-content">
         <div class="dichvu-form-wrapper">
